--- a/preprocessing/example2.ipynb
+++ b/preprocessing/example2.ipynb
@@ -1111,7 +1111,9 @@
     }
    ],
    "source": [
-    "df"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "desig_enc = OneHotEncoder(drop='first')\n",
+    "desig_enc.fit(df[['Designation']])"
    ]
   },
   {
